# indico-custom-profile-fields

./: .gitignore  .licenserc.yaml  CONTRIBUTING.md  MANIFEST.in  Makefile.docs  README.md  changelog.md  package-lock.json  pyproject.toml  requirements.dev.txt  tox.ini  url_map.json  webpack-build-config.json
.github/: .jira_sync_config.yaml  pull_request_template.yaml
.github/workflows/: docs.yaml  test.yaml
indico_custom_profile_fields/: __init__.py  custom_fields.json  fields_list.py  plugin.py
indico_custom_profile_fields/client/: customFieldForms.jsx  custom_fields.json  disableWithdrawButton.scss  index.js  options.js
indico_custom_profile_fields/migrations/: 20250829_1343_2812cdb72478_short_description.py  20250902_1106_7640c93f2e8f_short_description.py  20250908_1005_b9758dbfb220_new_tables.py  20250908_1014_3b609596bb71_new_tables.py  20251211_2310_7ca9a88f8f2f_add_country_field_seperate_legal_name_.py
indico_custom_profile_fields/models/: __init__.py  custom_fields.py  field_mapping.py
